--- a/package.json
+++ b/package.json
@@ -3,30 +3,37 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@tailwindcss/forms": "^0.5.6",
-    "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
-    "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "next": "^14.0.0",
-    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "@types/bcrypt": "^5.0.1",
+    "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "autoprefixer": "10.4.15",
     "dotenv": "^16.3.1",
-    "prettier": "^3.0.3"
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "engines": {
     "node": ">=18"
