--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.js",
     "scripts/seed.js",
-    "**/*.js"
+    "**/*.js",
+    "./.eslintrc.js"
   ],
   "exclude": ["node_modules"]
 }
