# 6. Setting Up Your Database

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
+    "seed": "node -r dotenv/config ./scripts/seed.mjs",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
